--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
 title:        Deeplay.io
 tagline:      Intelligent Data Labeling Platform
-url: https://deeplay-io.github.io/web
+url: https://deeplay-io.github.io
 future: true
